# weed-removal-robot

./: .gitignore  .gitmodules  INSTALL.md  README.md  frames_2026-05-14_13.29.54.gv
src/ur5_control/: package.xml  setup.py
src/ur5_control/config/: ur5_params.yaml
src/ur5_control/scripts/: handeye_calibrate.py  handeye_samples.npz
src/ur5_control/scripts/handeye_samples/: R_g2b.npy  R_t2c.npy  t_g2b.npy  t_t2c.npy
src/ur5_control/ur5_control/: ur5_node.py
src/vision_pick/: package.xml  setup.cfg  setup.py
src/vision_pick/config/: coordinator_params.yaml  realsense_params.yaml  yolo_params.yaml
src/vision_pick/launch/: full_pipeline.launch.py
src/vision_pick/vision_pick/: coordinator_node.py  yolo_detection_node.py
src/weed_robot_calibration/: package.xml  setup.cfg  setup.py
src/weed_robot_calibration/config/: aruco_parameters.yaml
src/weed_robot_calibration/launch/: calibrate.launch.py
